--- a/src/Custom_Style.css
+++ b/src/Custom_Style.css
@@ -8,7 +8,7 @@
       background-color: #49BBBD;
 }
 .main-text-color{
-      background-color: #252641;
+      color: #252641;
 }
 .s-text-color{
       color: #FFFFFF;
