update Custom_Style.css, Header.tsx and Home_Main.tsx

--- a/src/Custom_Style.css
+++ b/src/Custom_Style.css
@@ -13,3 +13,9 @@
 .s-text-color{
       color: #FFFFFF;
 }
+.curve-bg {
+  height: 200px;
+  background-color:  #49BBBD;
+  border-bottom-left-radius: 50% 100%;
+  border-bottom-right-radius: 50% 100%;
+}
